force-app/main/default/objects/Country_Code__mdt/fields/Dial_Code__c.field-meta.xml
<CustomField>
    <fullName>Dial_Code__c</fullName>
    <label>Dial Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>