force-app/main/default/objects/Country_Code__mdt/fields/ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code__c</fullName>
    <label>ISO Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>